<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.audio.AudioFragment">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="322dp"
        android:layout_height="31dp"
        android:layout_marginTop="224dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="60dp"
        android:text="@string/recordButtonStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="214dp"
        android:layout_height="47dp"
        android:layout_marginTop="48dp"
        android:text="@string/playPcmButtonStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordButton" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="88dp"
        android:text="@string/stopButtonStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />

    <Button
        android:id="@+id/wavButton"
        android:layout_width="214dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/wavButtonStr"
        app:layout_constraintEnd_toEndOf="@+id/playButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

</androidx.constraintlayout.widget.ConstraintLayout>