<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player.PlayerFragment">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="344dp"
        android:layout_height="441dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="338dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfaceView" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/playButtonStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="99dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/pauseButtonStr"
        app:layout_constraintEnd_toStartOf="@+id/stopButton"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:text="@string/stopButtonStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/chooseButton"
        android:layout_width="343dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/chooseButtonStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="59dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:text="@string/chooseTipStr"
        app:layout_constraintStart_toStartOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/pauseButton"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="261dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/stopButton"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/pauseButton"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>