<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.VideoFragment">

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:text="@string/startButtonStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stopButton" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="99dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/stopButtonStr"
        app:layout_constraintEnd_toStartOf="@+id/playVideoButton"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/playVideoButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:text="@string/playButtonStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stopButton"
        tools:ignore="MissingConstraints" />

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="394dp"
        android:layout_height="514dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textureView" />

</androidx.constraintlayout.widget.ConstraintLayout>