<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.VideoFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="330dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="342dp"
        android:layout_height="364dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="338dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surfaceView" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/startButtonStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="99dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:text="@string/stopButtonStr"
        app:layout_constraintEnd_toStartOf="@+id/playVideoButton"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/playVideoButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/playButtonStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>